--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.0",
+    "express-validator": "^3.1.2",
     "method-override": "^2.3.7",
     "mysql": "^2.13.0",
     "passport": "^0.3.2",
