Functioning password hash and partial returned user search

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/ajkhatibi/project2#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.0",
     "body-parser": "^1.16.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.0",
@@ -27,6 +29,7 @@
     "mysql": "^2.13.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "sendgrid": "^4.7.1",
     "sequelize": "^3.30.0"
   }
 }
