--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/ajkhatibi/project2#readme",
   "dependencies": {
+    "aws-sdk": "^2.9.0",
     "bcryptjs": "^2.4.0",
     "body-parser": "^1.16.0",
     "connect-flash": "^0.1.1",
+    "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.0",
