--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "henCoco87!",
+    "password": "password",
     "database": "emptyDB",
     "host": "127.0.0.1",
     "dialect": "mysql"
